# projet-compilo

./: .gitignore  CMakeLists.txt  README.md
docs/: GPL_reference.md  architecture.md  grammar.md
examples/: example.mylang  tri_fusion.mylang
grammars/: base_lang.gram  g0.gram  gpl.gram
include/ast/: ast.h
include/compilo/: instruction.hpp  lexer.hpp  opcode.hpp  parser.hpp  pcodegen.hpp  runtime.hpp  token.hpp
include/meta/: meta_ast.h  meta_ast_builder.hpp  meta_lexer.hpp  meta_parser.hpp  token.hpp
include/utils/: logger.hpp  stack.hpp
src/: main.cpp
src/ast/: ast.cpp
src/compilo/: lexer.cpp  parser.cpp  pcodegen.cpp  runtime.cpp
src/meta/: meta_ast.cpp  meta_ast_builder.cpp  meta_lexer.cpp  meta_parser.cpp
tests/: test_meta_parser.cpp  test_parser.cpp  test_runtime.cpp
